social links wrapping issue
- ensure that social links don't wrap
  on mobile view port widths

--- a/app/assets/stylesheets/components/sharing_buttons/_sharing_buttons.scss
+++ b/app/assets/stylesheets/components/sharing_buttons/_sharing_buttons.scss
@@ -1,7 +1,8 @@
 .sharing {
   @extend .unstyled-list;
   overflow: hidden;
-  margin: baseline-unit(6) 0;
+  margin: baseline-unit(12) 0 baseline-unit(6);
+  clear: both;
 
   @include respond-to($mq-two-col) {
     margin: baseline-unit(2) 0;
